--- a/filesample.yml
+++ b/filesample.yml
@@ -4,5 +4,5 @@
   tasks:
   - name: Creating an empty file
     file:
-      path: "/root/test123"
+      path: "/root/test123 {{ string }}"
       state: touch
