--- a/filesample.yml
+++ b/filesample.yml
@@ -1,8 +1,13 @@
 ---
 
 - hosts: proxmox
+vars_prompt:
+
+    - name: String
+      prompt: What is your username?
+      private: false
   tasks:
   - name: Creating an empty file
     file:
-      path: "/root/test123 {{ string }}"
+      path: "/root/test123 {{ String }}"
       state: touch
