--- a/filesample.yml
+++ b/filesample.yml
@@ -8,5 +8,5 @@
   tasks:
   - name: Creating an empty file
     file:
-      path: "/root/test123 {{ string }}"
+      path: "/root/test{{string}}"
       state: touch
